--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -7,17 +7,19 @@ on:
 
 jobs:
   PlanToDev:
-    name: 'Plan-to-dev'
-    uses: ./.github/actions
-    with:
-      environment: Development
-      tg_dir: ./non-prod/ca-central-1/non-prod
-      tg_command: plan
+    steps:
+    - name: 'Plan-to-dev'
+      uses: ./.github/actions
+      with:
+        environment: Development
+        tg_dir: ./non-prod/ca-central-1/non-prod
+        tg_command: plan
 
   PlanToProd:
-    name: 'Plan-to-prod'
-    uses: ./.github/actions
-    with:
-      environment: Production
-      tg_dir: ./prod/ca-central-1/prod
-      tg_command: plan
+    steps:
+    - name: 'Plan-to-prod'
+      uses: ./.github/actions
+      with:
+        environment: Production
+        tg_dir: ./prod/ca-central-1/prod
+        tg_command: plan
