--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   PlanToDev:
+    runs-on: self-hosted
     steps:
     - name: 'Plan-to-dev'
       uses: ./.github/actions
@@ -16,6 +17,7 @@ jobs:
         tg_command: plan
 
   PlanToProd:
+    runs-on: self-hosted
     steps:
     - name: 'Plan-to-prod'
       uses: ./.github/actions
