--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -9,6 +9,11 @@ jobs:
   PlanToDev:
     runs-on: self-hosted
     steps:
+    - name: Checkout source code
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GH_TOKEN }}
+
     - name: 'Plan-to-dev'
       uses: ./.github/actions
       with:
@@ -16,12 +21,17 @@ jobs:
         tg_dir: ./non-prod/ca-central-1/non-prod
         tg_command: plan
 
-  PlanToProd:
-    runs-on: self-hosted
-    steps:
-    - name: 'Plan-to-prod'
-      uses: ./.github/actions
-      with:
-        environment: Production
-        tg_dir: ./prod/ca-central-1/prod
-        tg_command: plan
+  # PlanToProd:
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: Checkout source code
+  #       uses: actions/checkout@v3
+  #       with:
+  #         token: ${{ secrets.GH_TOKEN }}
+  
+  #   - name: 'Plan-to-prod'
+  #     uses: ./.github/actions
+  #     with:
+  #       environment: Production
+  #       tg_dir: ./prod/ca-central-1/prod
+  #       tg_command: plan
