--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -20,6 +20,8 @@ jobs:
         environment: Development
         tg_dir: ./non-prod/ca-central-1/non-prod
         tg_command: plan
+        tf_version: '1.4.6'
+        tg_version: '0.46.3'
 
   # PlanToProd:
   #   runs-on: self-hosted
@@ -28,7 +30,7 @@ jobs:
   #       uses: actions/checkout@v3
   #       with:
   #         token: ${{ secrets.GH_TOKEN }}
-  
+
   #   - name: 'Plan-to-prod'
   #     uses: ./.github/actions
   #     with:
