--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         environment: Development
         tg_dir: ./non-prod/ca-central-1/non-prod
-        tg_command: plan
+        tg_command: run-all plan
         tf_version: '1.4.6'
         tg_version: '0.46.3'
 
