Adding user and workdir option for job

--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   PlanToDev:
     runs-on: self-hosted
+    container:
+      options:
+        --user root
+        --workdir=/home/ubuntu/actions-runner-1/_work/Infrastructure/Infrastructure
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
